<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <Spinner android:layout_width="match_parent"
             android:layout_height="35dp"
             android:id="@+id/quake_type_spinner"
            >
    </Spinner>
    <Spinner android:layout_width="match_parent"
             android:layout_height="35dp"
             android:id="@+id/duration_type_spinner"
            >
    </Spinner>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:padding="7dp">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/hide_action_bar"
                  android:gravity="start"/>
        <CheckBox android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/actionbar_toggle_checkbox"
                  android:gravity="end"/>
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:padding="7dp">
        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:text="@string/cache_label"
                  android:layout_weight="0.5"
                  android:gravity="start"
                  android:textSize="16sp"
                  android:id="@+id/cache_label"/>
        <Spinner android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:prompt="@string/cache_prompt"
                 android:entries="@array/cache_options"
                 android:spinnerMode="dropdown"
                 android:layout_weight="0.5"
                 android:gravity="end"
                 android:id="@+id/cache_spinner"/>

    </LinearLayout>
    <!-- The below View pushes the other items to the bottom -->
    <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:padding="7dp">
        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:text="@string/wifi_refresh_only_label"
                  android:layout_weight="0.5"
                  android:gravity="start"
                  android:textSize="16sp"
                  android:id="@+id/wifi_label"/>
        <CheckBox android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="0.5"
                  android:gravity="end"
                  android:id="@+id/wifi_checkbox"/>

    </LinearLayout>


</LinearLayout>