<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/about_padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_subname"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/bar_margin"
        android:layout_marginTop="@dimen/bar_margin"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:text="@string/version"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_number"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bar_margin"
        android:layout_marginTop="@dimen/bar_margin"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/github_source_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:onClick="onClick"
            android:src="@drawable/octocat80" />

        <TextView
            android:id="@+id/github_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/bar_margin"
        android:layout_marginTop="@dimen/bar_margin"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/other_social"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_social_label" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bar_margin"
        android:layout_marginTop="@dimen/bar_margin"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/gplus_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:onClick="onClick"
            android:src="@drawable/g80" />

        <TextView
            android:id="@+id/g_plus_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bar_margin"
        android:layout_marginTop="@dimen/bar_margin"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/linkedin_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:onClick="onClick"
            android:src="@drawable/in81" />

        <TextView
            android:id="@+id/linkedin_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <!-- The View below is meant to push the TextView beneath it to the bottom of the screen.-->
    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/icon_disclaimer"
        android:textSize="12sp" />

</LinearLayout>